[project]
name = "vector-db"
version = "0.1.0"
description = "AI记忆数据库 - 基于向量检索的记忆存储服务"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "pyinstaller>=6.21.0",
    "requests>=2.34.2",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=3.0.1",
    "torch>=2.0.0",
]
